aws-basic/autoscaling.tf
resource "aws_launch_template" "example-launchtemplate" {
  name_prefix     = "example-launchtemplate"
  image_id        = "${var.INSTANCE_AMI}"
  instance_type   = "${var.INSTANCE_TYPE}"
  key_name        = aws_key_pair.mykeypair.key_name
  vpc_security_group_ids = [
    aws_security_group.allow-ssh.id
  ]
}

resource "aws_autoscaling_group" "example-autoscaling" {
  name                = "example-autoscaling"
  vpc_zone_identifier = [
    aws_subnet.main-public-1.id,
    aws_subnet.main-public-2.id
  ]
  launch_template {
    id      = aws_launch_template.example-launchtemplate.id
    version = "$Latest"
  }
  min_size                  = 1
  max_size                  = 2
  health_check_grace_period = 300
  health_check_type         = "EC2"
  force_delete              = true

  tag {
    key                 = "Name"
    value               = "ec2 instance"
    propagate_at_launch = true
  }
}
